--- a/src/main/resources/static/home.html
+++ b/src/main/resources/static/home.html
@@ -2,16 +2,8 @@
 <!-- Main jumbotron for a primary marketing message or call to action -->
 <div class="jumbotron">
 	<div class="container">
-		<h1 class="display-3">Hello, world!</h1>
-		<p>This is a template for a simple marketing or informational
-			website. It includes a large callout called a jumbotron and three
-			supporting pieces of content. Use it as a starting point to create
-			something more unique.</p>
-		<p>
-			<a class="btn btn-primary btn-lg"
-				href="https://getbootstrap.com/docs/4.0/examples/jumbotron/#"
-				role="button">Learn more »</a>
-		</p>
+		<h1 class="display-3">Welcome to Library Management System</h1>
+		<p>You can start using this application from choosing your role</p>
 	</div>
 </div>
 
@@ -19,39 +11,31 @@
 	<!-- Example row of columns -->
 	<div class="row">
 		<div class="col-md-4">
-			<h2>Heading</h2>
-			<p>Donec id elit non mi porta gravida at eget metus. Fusce
-				dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh,
-				ut fermentum massa justo sit amet risus. Etiam porta sem malesuada
-				magna mollis euismod. Donec sed odio dui.</p>
+			<h2>Administrator</h2>
+			<p>Administrator has access to all data in the library application and can perform multiple operations 
+				such as reading, creating, updating and deleting</p>
 			<p>
 				<a class="btn btn-secondary"
-					href="https://getbootstrap.com/docs/4.0/examples/jumbotron/#"
-					role="button">View details »</a>
+					href="#/admin"
+					role="button">Login as Administrator</a>
 			</p>
 		</div>
 		<div class="col-md-4">
-			<h2>Heading</h2>
-			<p>Donec id elit non mi porta gravida at eget metus. Fusce
-				dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh,
-				ut fermentum massa justo sit amet risus. Etiam porta sem malesuada
-				magna mollis euismod. Donec sed odio dui.</p>
+			<h2>Librarian</h2>
+			<p>Librarian can update the details of his branch and add books to the branch</p>
 			<p>
 				<a class="btn btn-secondary"
-					href="https://getbootstrap.com/docs/4.0/examples/jumbotron/#"
-					role="button">View details »</a>
+					href="#/librarian/librarian"
+					role="button">Login as Librarian</a>
 			</p>
 		</div>
 		<div class="col-md-4">
-			<h2>Heading</h2>
-			<p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in,
-				egestas eget quam. Vestibulum id ligula porta felis euismod semper.
-				Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum
-				nibh, ut fermentum massa justo sit amet risus.</p>
+			<h2>Borrower</h2>
+			<p>Borrower can checkout books and then return them</p>
 			<p>
 				<a class="btn btn-secondary"
-					href="https://getbootstrap.com/docs/4.0/examples/jumbotron/#"
-					role="button">View details »</a>
+					href="#/borrower/borrower"
+					role="button">Login as Borrower</a>
 			</p>
 		</div>
 	</div>
